[package]
name = "sdcons"
description = "An implementation of geo-replicated distributed consensus algorithm: SDPaxos"
version = "0.1.0"
authors = ["p4tr1ck <patricknicholas@foxmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https/github.com/patricknicholas/sdcons/"
readme = "README.md"
repository = "https://github.com/patricknicholas/sdcons/"
keywords = ["sdpaxos", "consensus"]
categories = ["replication", "geo-replication"]
exclude = [
    ".gitignore",
    ".rustfmt.toml",
    ".travis.yml",
    "images/*",
    "scripts/chaos_run.sh",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["examples", "examples/jepsen"]

[dependencies]
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.0" }
chrono = { version = "0.4" }
thiserror = { version = "1.0" }
rand = { version = "0.8.0", features=["std", "std_rng"] }

[lib]
name = "sdcons"
path = "src/sdcons/lib.rs"

[profile.dev]
debug = true
panic = "abort"

[profile.release]
panic = "abort"