[package]
name = "native_sdk"
version = "0.1.0"
authors = ["p4tr1ck <patricknicholas@foxmail.com>"]
edition = "2018"

[dependencies]
jni = "0.19.0"
tokio = { version = "1.0", features = ["full"] }
tarpc = { version = "0.25.1", features = ["full"] }
log = { version = "0.4" }
simplekv = { path = "../"}

[lib]
crate_type = ["cdylib"]
name = "native_sdk"
path = "lib.rs"
